<resources>
    <!-- ГЛАВНАЯ СТРАНИЦА START -->
    <string name="app_name">playlistMaker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <!-- ГЛАВНАЯ СТРАНИЦА END -->
    <!-- СТРАНИЦА НАСТРОЙКИ START -->
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="arr">Стрелка</string>
    <string name="email_name">melifaro00@yandex.ru</string>
    <string name="email">mailto:</string>
    <string name="arr_to_main">На главную</string>
    <!-- Кнопки -->
    <string name="shareButtonText" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="theme_mail">«Сообщение разработчикам и разработчицам приложения Playlist Maker»</string>
    <string name="text_mail">«Спасибо разработчикам и разработчицам за крутое приложение!»</string>
    <string name="terms_article" >
        https://yandex.ru/legal/practicum_offer/
    </string>
    <!-- СТРАНИЦА НАСТРОЙКИ END -->
    <!-- СТРАНИЦА ПОИСКА START -->
    <string name="loupe">Лупа</string>
    <string name="delete_button">Крестик</string>
    <string name="song_foto">Картинка песни</string>
    <string name="dot">Точка</string>
    <string name="song_search">Песня</string>
    <string name="play">Играть</string>
    <string name="song_name">Yesterday(Remastered 2009)</string>
    <string name="artist_name">The Beatles</string>
    <string name="song_time">2:55</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="disconnect">Нет интернета</string>
    <string name="noInternet">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <!-- СТРАНИЦА ПОИСКА END -->
</resources>