<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!-- Общий контейнер -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >
        <!-- Строка 1 Настройки-->
        <LinearLayout style="@style/pageSettings_string_head" >
            <!-- Стрелка назад -->
            <ImageView android:id="@+id/arrBack"
                style="@style/pageSettings_arr_back"/>
            <!-- Заголовок  -->
            <TextView android:text="@string/settings"
                style="@style/pageSettings_txt_settings" />
        </LinearLayout>
        <!-- Строка 2 Темная тема -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white" >
            <!-- Заголовок  -->
            <TextView android:text="@string/dark_theme"
                style="@style/pageSettings_txt_night_theme" />
            <!-- Переключатель -->
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchcompat"
                style="@style/pageSettings_switch" />
        </LinearLayout>

        <!-- Строка 3 Поделиться приложением -->
        <LinearLayout style="@style/pageSettings_string_simple">
            <FrameLayout style="@style/pageSettings_string_frame" >
                <!-- Заголовок  -->
                <TextView android:text="@string/share_app"
                    style="@style/pageSettings_string_text"/>
                <!-- Картинка  -->
                <ImageView android:src="@drawable/ico_share24"
                    style="@style/pageSettings_string_ico" />
            </FrameLayout>
        </LinearLayout>
        <!-- Строка 4 Написать в техподдержку -->
        <LinearLayout style="@style/pageSettings_string_simple">
            <FrameLayout style="@style/pageSettings_string_frame" >
                <!-- Заголовок  -->
                <TextView android:text="@string/write_to_support"
                    style="@style/pageSettings_string_text"/>
                <!-- Картинка  -->
                <ImageView android:src="@drawable/ico_support24"
                    style="@style/pageSettings_string_ico"/>
            </FrameLayout>
        </LinearLayout>
        <!-- Строка 5 Пользовательское соглашение -->
        <LinearLayout style="@style/pageSettings_string_simple" >
            <FrameLayout style="@style/pageSettings_string_frame" >
                <!-- Заголовок  -->
                <TextView android:text="@string/terms_of_use"
                    style="@style/pageSettings_string_text"/>
                <!-- Картинка  -->
                <ImageView android:src="@drawable/ico_arr_forward24"
                    style="@style/pageSettings_string_ico"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>