<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Блок песни android:background="@color/search_background" -->
    <LinearLayout
        style="@style/view_song"
        tools:ignore="MissingConstraints">
        <!-- Картинка для песни -->
        <ImageView
            android:id="@+id/ico_song"
            style="@style/view_song_img"
            android:contentDescription="@string/song_foto" />
        <!-- Описание песни -->
        <LinearLayout
            style="@style/view_song_description" >
            <!-- Название песни -->
            <TextView
                style="@style/view_song_name"
                android:id="@+id/song_name" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <!-- Исполнитель песни -->
                <TextView
                    style="@style/view_song_artist"
                    android:id="@+id/artist_name"
                    android:textSize="@dimen/text12" />
                <!-- Точка, разделитель -->
                <ImageView
                    style="@style/view_song_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dot"
                    android:contentDescription="@string/dot" />
                <!-- Длительность песни -->
                <TextView
                    android:id="@+id/song_time"
                    style="@style/view_song_time"/>
            </LinearLayout>
        </LinearLayout>
        <!-- Играть песню-->
        <ImageView
            android:id="@+id/track_arrow"
            style="@style/view_song_play"
            android:src="@drawable/ico_arr_forward24"
            android:contentDescription="@string/play" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>